added 4 quadrant tests