@@ -31,6 +31,8 @@
                     <jvmArgs>
                         <arg>-Djava.awt.headless=false</arg>
                         <arg>--add-opens</arg>
+                        <arg>java.base/java.util=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
                         <arg>java.desktop/java.awt=ALL-UNNAMED</arg>
                         <arg>--add-opens</arg>
                         <arg>java.desktop/java.awt.event=ALL-UNNAMED</arg>
@@ -47,6 +49,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.desktop/java.awt=ALL-UNNAMED
                         --add-opens java.desktop/java.awt.event=ALL-UNNAMED
                         --add-opens java.desktop/javax.swing=ALL-UNNAMED
